--- a/catalog.html
+++ b/catalog.html
@@ -140,113 +140,113 @@
         </div>
     </section>
     <section class="main-catalog__product center">
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img1.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img1.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img13.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img13.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img3.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img3.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img4.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img4.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img9.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img9.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img10.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img10.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img11.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img11.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img12.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img12.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
-        <div class="product__card">
+        <div class="product-card">
             <a href="product.html">
-                <img src="img/product_img14.png" class="product__img" alt="product">
-                <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
+                <img src="img/product_img14.png" class="product-card__img" alt="product">
+                <h4 class="product-card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="#" class="product-card__button-hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
-            <p class="product__card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-            <p class="product__card__price">$52.00</p>
+            <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product-card__price">$52.00</p>
         </div>
     </section>
     <nav class="pagination">
@@ -265,67 +265,67 @@
         </div>
     </nav>
     <footer>
-        <div class="footer__top">
-            <div class="footer__top__container center">
-                <div class="footer__top__item">
+        <div class="footer-top">
+            <div class="footer-top__container center">
+                <div class="footer-top__item">
                     <img src="img/footer_img1.svg" alt="delivery">
-                    <h3 class="footer__top__header">Free Delivery</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    <h3 class="footer-top__header">Free Delivery</h3>
+                    <p class="footer-top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
-                <div class="footer__top__item">
+                <div class="footer-top__item">
                     <img src="img/footer_img2.svg" alt="sales">
-                    <h3 class="footer__top__header">Sales & discounts</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    <h3 class="footer-top__header">Sales & discounts</h3>
+                    <p class="footer-top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
-                <div class="footer__top__item">
+                <div class="footer-top__item">
                     <img src="img/footer_img3.svg" alt="quality">
-                    <h3 class="footer__top__header">Quality assurance</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
+                    <h3 class="footer-top__header">Quality assurance</h3>
+                    <p class="footer-top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
                         tion with extensive models.</p>
                 </div>
             </div>
         </div>
-        <div class="footer__subscribe center">
-            <figure class="footer__subscribe__info">
-                <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
-                <figcaption class="footer__subscribe__text">
+        <div class="footer-subscribe center">
+            <figure class="footer-subscribe__info">
+                <img src="img/subscribe_img.png" alt="subscribe" class="footer-subscribe__img">
+                <figcaption class="footer-subscribe__text">
                     “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“
                 </figcaption>
             </figure>
-            <div class="footer__subscribe__form">
-                <h3 class="footer__subscribe__form__header">SUBSCRIBE</h3>
-                <p class="footer__subscribe__form__text">FOR OUR NEWLETTER AND PROMOTION</p>
-                <form class="footer__subscribe__form__form">
-                    <input type="email" class="footer__subscribe__input" placeholder="Enter Your Email">
-                    <button type="submit" class="footer__subscribe__button">Subscribe</button>
+            <div class="subscribe-form">
+                <h3 class="subscribe-form__header">SUBSCRIBE</h3>
+                <p class="subscribe-form__text">FOR OUR NEWLETTER AND PROMOTION</p>
+                <form class="subscribe-form__form">
+                    <input type="email" class="subscribe-form__input" placeholder="Enter Your Email">
+                    <button type="submit" class="subscribe-form__button">Subscribe</button>
                 </form>
             </div>
         </div>
-        <div class="footer__bottom">
-            <div class="footer__bottom__container center">
-                <div class="footer__copyright">&copy  2021 Brand All Rights Reserved.</div>
-                <div class="footer__social">
+        <div class="footer-bottom">
+            <div class="footer-bottom__container center">
+                <div class="footer-bottom__copyright">&copy;  2021 Brand All Rights Reserved.</div>
+                <div class="footer-bottom__social">
                     <a href="#">
-                        <div class="footer__icon">
-                            <img src="img/facebook_img.svg" class="footer__icon_hover" alt="facebook">
+                        <div class="footer-bottom__icon">
+                            <img src="img/facebook_img.svg" class="footer-bottom__icon_hover" alt="facebook">
                         </div>
                     </a>
                     <a href="#">
-                        <div class="footer__icon footer__icon__instagram">
-                            <img src="img/instagram_img.svg" class="footer__icon_hover instagram_invert"
+                        <div class="footer-bottom__icon footer-bottom__instagram">
+                            <img src="img/instagram_img.svg" class="footer-bottom__icon_hover footer-bottom__instagram_invert"
                                 alt="instagram">
                         </div>
                     </a>
                     <a href="#">
-                        <div class="footer__icon">
-                            <img src="img/pinterest_img.svg" class="footer__icon_hover" alt="pinterest">
+                        <div class="footer-bottom__icon">
+                            <img src="img/pinterest_img.svg" class="footer-bottom__icon_hover" alt="pinterest">
                         </div>
                     </a>
                     <a href="#">
-                        <div class="footer__icon">
-                            <img src="img/twitter_img.svg" class="footer__icon_hover" alt="twitter">
+                        <div class="footer-bottom__icon">
+                            <img src="img/twitter_img.svg" class="footer-bottom__icon_hover" alt="twitter">
                         </div>
                     </a>
                 </div>
