--- a/cart.html
+++ b/cart.html
@@ -59,15 +59,15 @@
                     <h3 class="cart-card__header"><a href="product.html" class="cart-card__header_color">MANGO  PEOPLE  T-SHIRT</a></h3>
                     <h4 class="cart-card__text">
                         Price:
-                        <p class="cart-card__description_mg cart-card__description_red">$300</p>
+                        <span class="cart-card__description_mg cart-card__description_red">$300</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Color:
-                        <p class="cart-card__description_mg">Red</p>
+                        <span class="cart-card__description_mg">Red</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Size:
-                        <p class="cart-card__description_mg">Xl</p>
+                        <span class="cart-card__description_mg">Xl</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Quantity:                        
@@ -82,15 +82,15 @@
                     <h3 class="cart-card__header"><a href="product.html" class="cart-card__header_color">MANGO  PEOPLE  T-SHIRT</a></h3>
                     <h4 class="cart-card__text">
                         Price:
-                        <p class="cart-card__description_mg cart-card__description_red">$300</p>
+                        <span class="cart-card__description_mg cart-card__description_red">$300</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Color:
-                        <p class="cart-card__description_mg">Red</p>
+                        <span class="cart-card__description_mg">Red</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Size:
-                        <p class="cart-card__description_mg">Xl</p>
+                        <span class="cart-card__description_mg">Xl</span>
                     </h4>
                     <h4 class="cart-card__text">
                         Quantity:
@@ -115,11 +115,11 @@
             <div class="quote">
                 <h4 class="quote__sub-price">
                     SUB TOTAL      
-                    <p class="quote__price_mg">$900</p>
+                    <span class="quote__price_mg">$900</span>
                 </h4>
                 <h4 class="quote__price">
                     GRAND TOTAL      
-                    <p class="quote__price_mg quote__price_red">$900</p>
+                    <span class="quote__price_mg quote__price_red">$900</span>
                 </h4>
                 <div class="quote__devider"></div>
                 <a href="#" class="quote__button">PROCEED TO CHECKOUT</a>
