--- a/catalog.html
+++ b/catalog.html
@@ -57,18 +57,15 @@
             </nav>
         </div>
     </section>
-    <section class="filter-menu_position">
+    <div class="filter-menu_position">
         <div class="filter-menu">
             <input class="filter-menu__input" type="checkbox" id="filter">
             <label for="filter" class="filter-menu__text">
                 FILTER
-                <img src="img/filter_img.svg" class="filter-menu__img_mg" alt="toggle">
+                <img src="img/filter_img.svg" class="filter-menu__img" alt="toggle">
+                <img src="img/filter_img_red.svg" class="filter-menu__img_red" alt="toggle">
             </label>
-            <nav class="filter-menu__navbar">
-                <input class="filter-menu__input" type="checkbox" id="filter">
-                <label for="filter" class="filter-menu__text_red">
-                FILTER
-                <img src="img/filter_img_red.svg" class="filter-menu__img_mg" alt="toggle">
+            <nav class="filter-menu__navbar">                
                 <details class="filter-menu__details" open>
                     <summary>CATEGORY</summary>
                     <div class="filter-menu__category">
@@ -96,7 +93,7 @@
         <div class="chooser-checkbox_position">
             <div class="chooser-checkbox">
                 <input type="checkbox">
-                <label for="#">
+                <label>
                     TRENDING NOW
                     <img src="img/filter_img2.svg" class="chooser-checkbox__img" alt="toggle">
                 </label>
@@ -110,22 +107,18 @@
                 <nav class="chooser-checkbox__navbar">
                     <label class="chooser-checkbox__checkbox_position">
                         <input type="checkbox" class="chooser-checkbox__checkbox_visible">
-                        <div class="chooser-checkbox__checkbox"></div>
                         XS
                     </label>
                     <label class="chooser-checkbox__checkbox_position">
                         <input type="checkbox" class="chooser-checkbox__checkbox_visible">
-                        <div class="chooser-checkbox__checkbox"></div>
                         S
                     </label>
                     <label class="chooser-checkbox__checkbox_position">
                         <input type="checkbox" class="chooser-checkbox__checkbox_visible">
-                        <div class="chooser-checkbox__checkbox"></div>
                         M
                     </label>
                     <label class="chooser-checkbox__checkbox_position">
                         <input type="checkbox" class="chooser-checkbox__checkbox_visible">
-                        <div class="chooser-checkbox__checkbox"></div>
                         L
                     </label>                    
                 </nav>
@@ -138,7 +131,7 @@
                 </label>
             </div>            
         </div>
-    </section>
+    </div>
     <section class="main-catalog__product center">
         <div class="product-card">
             <a href="product.html">
