--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
             </nav>
         </div>
     </section>
-    <section class="slider">
+    <div class="slider">
         <div class="slider__arrow-box">
             <a href="#"><img src="img/slider_arrow_left.svg" class="slider__arrows" alt="arrow"></a> 
         </div>       
@@ -65,7 +65,7 @@
         <div class="slider__arrow-box">
             <a href="#"><img src="img/slider_arrow_right.svg" class="slider__arrows" alt="arrow"></a> 
         </div> 
-    </section>
+    </div>
     <section class="product-description">
         <div class="product-description__container">
             <div class="product-description__position">
@@ -84,28 +84,24 @@
                     <div class="chooser__item">
                         CHOOSE SIZE
                         <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
-                        <nav class="chooser__navbar">
-                            <label class="filter__center__add_checkbox">
-                                <input type="checkbox" class="checkbox_visible">
-                                <div class="add_checkbox"></div>
+                        <nav class="chooser-checkbox__navbar">
+                            <label class="chooser-checkbox__checkbox_position">
+                                <input type="checkbox" class="chooser-checkbox__checkbox_visible">
                                 XS
                             </label>
-                            <label class="filter__center__add_checkbox">
-                                <input type="checkbox" class="checkbox_visible">
-                                <div class="add_checkbox"></div>
+                            <label class="chooser-checkbox__checkbox_position">
+                                <input type="checkbox" class="chooser-checkbox__checkbox_visible">
                                 S
                             </label>
-                            <label class="filter__center__add_checkbox">
-                                <input type="checkbox" class="checkbox_visible">
-                                <div class="add_checkbox"></div>
+                            <label class="chooser-checkbox__checkbox_position">
+                                <input type="checkbox" class="chooser-checkbox__checkbox_visible">
                                 M
                             </label>
-                            <label class="filter__center__add_checkbox">
-                                <input type="checkbox" class="checkbox_visible">
-                                <div class="add_checkbox"></div>
+                            <label class="chooser-checkbox__checkbox_position">
+                                <input type="checkbox" class="chooser-checkbox__checkbox_visible">
                                 L
                             </label>                    
-                        </nav>
+                        </nav>                        
                     </div>
                     <div class="chooser__item">
                         QUANTITY
