--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
-            <a href="registration.html"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="cart.html"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
+            <a href="registration.html" class="main-menu__img_hide"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+            <a href="cart.html" class="main-menu__img_hide"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
         </div>
     </header>
     <main class="promo">
@@ -81,8 +81,8 @@
             </div>
         </div>
         <div class="catalog__bottom">
-            <div class="catalog__item">
-                <img src="img/accesories.png" class="catalog__img" alt="accesories">
+            <div class="catalog__item catalog__item_height">
+                <img src="img/accesories.png" class="catalog__img catalog__img_height" alt="accesories">
                 <div class="catalog__content">
                     <h3 class="catalog__header">LUXIROUS & TRENDY</h3>
                     <p class="catalog__text">ACCESORIES</p>
