--- a/registration.html
+++ b/registration.html
@@ -41,8 +41,8 @@
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
-            <a href="registration.html"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="cart.html"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
+            <a href="registration.html" class="main-menu__img_hide"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+            <a href="cart.html" class="main-menu__img_hide"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
         </div>
     </header>
     <section class="main-catalog__header__container">
