--- a/cart.html
+++ b/cart.html
@@ -48,7 +48,7 @@
     </header>
     <section class="main-catalog__header__container">
         <div class="main-catalog__header center">
-            <h2 class="main-catalog__header__header">SHOPPING CART</h2>            
+            <h2 class="main-catalog__header__header main-catalog__header__header_mg">SHOPPING CART</h2>            
         </div>
     </section>
     <main class="cart">
