--- a/product.html
+++ b/product.html
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-    <section class="main-catalog__product center">
+    <section class="main-catalog__product main-catalog__product_mg center">
         <div class="product-card">
             <a href="product.html">
                 <img src="img/product_img1.png" class="product-card__img" alt="product">
