--- a/registration.html
+++ b/registration.html
@@ -18,22 +18,26 @@
                 <img src="img/menu.svg" class="top-header__main-menu" alt="menu">
             </label>
             <nav>
+                <div class="top-header__box top-header__box_hide">
+                    <a href="registration.html" class="main-menu__img_hide"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+                    <a href="cart.html" class="main-menu__img_hide"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
+                </div>
                 <label for="main_menu" class="close_icon">
                     <img src="img/close_img.svg" alt="cross">
                 </label>
                 <h5 class="main_menu__header">MENU</h5>
-                <p class="main_menu__section">MAN</p>
+                <a href="catalog.html" class="main_menu__section">MAN</a>
                 <a href="catalog.html" class="main_menu__item">Accessories</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
                 <a href="catalog.html" class="main_menu__item">Denim</a>
                 <a href="catalog.html" class="main_menu__item">T-Shirts</a>
-                <p class="main_menu__section">WOMAN</p>
+                <a href="catalog.html" class="main_menu__section">WOMAN</a> 
                 <a href="catalog.html" class="main_menu__item">Accessories</a>
                 <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
                 <a href="catalog.html" class="main_menu__item">Polos</a>
                 <a href="catalog.html" class="main_menu__item">T-Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
-                <p class="main_menu__section">KIDS</p>
+                <a href="catalog.html" class="main_menu__section">KIDS</a>
                 <a href="catalog.html" class="main_menu__item">Accessories</a>
                 <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
                 <a href="catalog.html" class="main_menu__item">Polos</a>
@@ -41,8 +45,10 @@
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
-            <a href="registration.html" class="main-menu__img_hide"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="cart.html" class="main-menu__img_hide"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
+            <div class="top-header__box">
+                <a href="registration.html" class="main-menu__img_hide"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+                <a href="cart.html" class="main-menu__img_hide"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
+            </div>
         </div>
     </header>
     <section class="main-catalog__header__container">
